Add private keys for redis

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,6 @@
 COOKIE_SECRET=secubooksecret
 SEQUELIZE_PASSWORD=itc15532
 SEQUELIZE_USERNAME=root
+REDIS_HOST=redis-12221.c84.us-east-1-2.ec2.cloud.redislabs.com
+REDIS_PORT=12221
+REDIS_PASSWORD=mjrg4hC1dr0lRIMUVMl1kcDhRfmhbNca
