--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "NODE_ENV=production PORT=80 pm2 start app.js",
+    "start": "NODE_ENV=production PORT=80 pm2 start app.js -i -1",
     "dev": "nodemon app"
   },
   "author": "cho",
@@ -25,6 +25,7 @@
     "passport-local": "^1.0.0",
     "pm2": "^4.5.0",
     "pug": "^3.0.0",
+    "redis": "^3.0.2",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
     "winston": "^3.3.0"
