--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.1",
     "helmet": "^4.1.1",
     "hpp": "^0.2.3",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
