--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "redis": "^3.0.2",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
+    "session-file-store": "^1.5.0",
     "shelljs": "^0.8.4",
     "winston": "^3.3.0"
   },
